# artificial-neural-network

./: FEHDataStudent.xlsx  README.md  artificial-neural-network.py  neural_network.py  pyproject.toml  readme.md  requirements.txt
app/api/: api.py
app/data/: compare-data.xlsx
app/processing/: data_splitter.py
backend/: README.md  main.py  pyproject.toml
backend/app/: ann.py
backend/app/api/endpoints/: ann.py
backend/app/config/: config.py
backend/app/models/: flood_predictor.py
backend/app/visualisation/: result_visualiser.py
config/: config.py
data/: FEHDataStudent.xlsx
models/: flood_predictor.py  neural_network.py
processing/: data_processor.py  data_splitter.py  data_standardiser.py
scripts/: artificial-neural-network.py
visualisation/: result_visualiser.py
