[tool.poetry]
name = "artificial-neural-network"
version = "0.1.0"
description = ""
authors = ["Dom Parsons <puffins_fridge0d@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.4.0"
asgiref = "3.8.1"
build = "1.2.2"
cachecontrol = "0.14.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
contourpy = "1.3.0"
crashtest = "0.4.1"
cycler = "0.12.1"
distlib = "0.3.8"
django = "5.1"
django-cors-headers = "4.4.0"
dnspython = "2.6.1"
dulwich = "0.21.7"
email-validator = "2.2.0"
et-xmlfile = "1.1.0"
fastapi = "0.115.0"
fastapi-cli = "0.0.5"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
fonttools = "4.53.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.2"
idna = "3.8"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
joblib = "1.4.2"
keyring = "24.3.1"
kiwisolver = "1.4.5"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.9.2"
mdurl = "0.1.2"
more-itertools = "10.5.0"
msgpack = "1.1.0"
numpy = "2.1.0"
oauthlib = "3.2.2"
openpyxl = "3.1.5"
packaging = "24.1"
pandas = "2.2.2"
pexpect = "4.9.0"
pillow = "10.4.0"
pip = "24.2"
pkginfo = "1.11.1"
platformdirs = "4.3.6"
plotly = "5.24.1"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pycparser = "2.22"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pygments = "2.18.0"
pyparsing = "3.1.4"
pyproject-hooks = "1.1.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytz = "2024.1"
pyyaml = "6.0.2"
rapidfuzz = "3.10.0"
requests = "2.32.3"
requests-oauthlib = "1.3.1"
requests-toolbelt = "1.0.0"
rich = "13.8.0"
scikit-learn = "1.5.1"
scipy = "1.14.1"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.32"
sqlparse = "0.5.1"
starlette = "0.38.2"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
tomlkit = "0.13.2"
trove-classifiers = "2024.9.12"
tweepy = "4.14.0"
typer = "0.12.5"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
uv = "0.4.16"
uvicorn = "0.30.6"
uvloop = "0.20.0"
virtualenv = "20.26.5"
watchfiles = "0.24.0"
websockets = "13.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
