[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-stubs==2.3.0.250703",
    "pathlib>=1.0.1",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "scipy-stubs==1.16.1.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.6",
]
